--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 1140px;
+  width: 1139px;
   padding: 1px 0 1px 15px;
   margin: 0 auto;
   background-color: #f3c6bd;
@@ -279,7 +279,7 @@
 .hero__inner {
   display: flex;
   justify-content: space-between;
-  background-color: #f3c6bd;
+  background-color: #fff;
   padding: 40px 25px 126px 130px;
   position: relative;
 }
