--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@
   justify-content: space-between;
   align-items: center;
   width: 1139px;
+  height: 62px;
   padding: 1px 0 1px 15px;
   margin: 0 auto;
   background-color: #f3c6bd;
