--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
   background-color: #f3c6bd;
   transition: padding 0.3s, background-color 0.3s;
   z-index: 1002;
+  margin: 0 auto 0 140px;
 }
 .header__inner--sticky {
   position: fixed;
