--- a/styles.css
+++ b/styles.css
@@ -15,8 +15,8 @@
   justify-content: space-between;
   align-items: center;
   width: 1140px;
-  padding: 1px 0 0 15px;
-  margin: 0 auto;
+  padding: 1px 0 1px 15px;
+  margin: 0 auto 0 130px;
   background-color: #f3c6bd;
   transition: padding 0.3s, background-color 0.3s;
   z-index: 1002;
