--- a/styles/header.scss
+++ b/styles/header.scss
@@ -16,8 +16,8 @@
   align-items: center;
   // padding: 40px 130px 36px 130px; //!!!!!!
   width: 1140px; // !!!!!!!!!!!!
-  padding: 1px 0 0 15px; //!!!!!!!!!
-  margin: 0 auto;
+  padding: 1px 0 1px 15px; //!!!!!!!!!
+  margin: 0 auto 0 130px;
   background-color: $color-beige;
   transition: padding 0.3s, background-color 0.3s;
   z-index: 1002;
