--- a/styles/index.scss
+++ b/styles/index.scss
@@ -1,7 +1,7 @@
 @import 'breakpoints';
 @import 'variables';
 @import 'header';
-@import 'hero';
+@import 'headline';
 @import 'about';
 @import 'partners';
 @import 'features';
