--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -2,8 +2,8 @@
   &__inner {
     display: flex;
     justify-content: space-between;
-    // background-color: $color-beige;
-    background-color: #fff; //!!!!!!!!!!
+    background-color: $color-beige;
+    // background-color: #fff; //!!!!!!!!!!
     padding: 40px 25px 126px 130px;
     position: relative;
   }
