--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,3 @@
-.header {
-  background-color: #fff;
-}
 .header .fa-chevron-down {
   display: none;
 }
@@ -279,7 +276,7 @@
 .headline__inner {
   display: flex;
   justify-content: space-between;
-  background-color: #fff;
+  background-color: #f3c6bd;
   padding: 40px 25px 126px 130px;
   position: relative;
 }
@@ -1349,7 +1346,7 @@
     max-width: 290px;
   }
 }
-.subscription {
+.order {
   display: flex;
   align-items: center;
   justify-content: flex-center;
@@ -1357,26 +1354,26 @@
   background-color: #f4f5f7;
   padding: 72px 224px;
 }
-.subscription__image {
+.order__image {
   max-width: 270px;
   height: 296px;
 }
-.subscription__title {
+.order__title {
   font-size: 40px;
   font-weight: 700;
 }
-.subscription__description {
+.order__description {
   font-size: 22px;
   margin-bottom: 26px;
   max-width: 555px;
   margin-bottom: 30px;
 }
-.subscription__form {
+.order__form {
   display: flex;
   gap: 10px;
   margin-bottom: 10px;
 }
-.subscription__form-input {
+.order__form-input {
   display: block;
   width: 100%;
   max-width: 385px;
@@ -1384,60 +1381,60 @@
   line-height: 1;
   padding: 13px 0 13px 15px;
 }
-.subscription__form-input:focus {
+.order__form-input:focus {
   outline: 1px solid #3142c6;
 }
-.subscription__text {
+.order__text {
   font-size: 14px;
   color: rgba(43, 41, 45, 0.6);
 }
-.subscription__link {
+.order__link {
   color: #3142c6;
   text-decoration: underline;
   transition: color 0.2s ease-in-out;
 }
-.subscription__link:hover {
+.order__link:hover {
   color: #0189d1;
 }
 
 @media screen and (max-width: 1440px) {
-  .subscription {
+  .order {
     justify-content: center;
     align-items: center;
     padding: 72px 15px;
   }
 }
 @media screen and (max-width: 1200px) {
-  .subscription {
+  .order {
     flex-direction: column;
     gap: 50px;
   }
 }
 @media screen and (max-width: 586px) {
-  .subscription {
+  .order {
     align-items: center;
     justify-content: center;
     gap: 36px;
     padding: 54px 15px 46px;
   }
-  .subscription__form {
+  .order__form {
     flex-direction: column;
   }
-  .subscription__form-input {
+  .order__form-input {
     max-width: 100%;
   }
 }
 @media screen and (max-width: 480px) {
-  .subscription__image {
+  .order__image {
     max-width: 200px;
     height: 220px;
   }
-  .subscription__title {
+  .order__title {
     font-size: 38px;
     text-align: center;
     line-height: 1.1;
   }
-  .subscription__description {
+  .order__description {
     margin-bottom: 68px;
   }
 }
