--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,5 +1,5 @@
 .header {
-  background-color: #fff; //!!!!!!!!!!!!!!!!!
+  // background-color: #fff; //!!!!!!!!!!!!!!!!!
   .fa-chevron-down {
     display: none;
   }
