--- a/styles/header.scss
+++ b/styles/header.scss
@@ -22,6 +22,10 @@
   transition: padding 0.3s, background-color 0.3s;
   z-index: 1002;
 
+  @media screen and (max-width: $media-480) {
+    display: none;
+  }
+
 
   &--sticky {
     position: fixed;
