--- a/styles.css
+++ b/styles.css
@@ -373,6 +373,11 @@
     width: 100%;
   }
   .headline__inner {
+    padding: 32px 15px 58px;
+  }
+}
+@media screen and (max-width: 576px) and (max-width: 480px) {
+  .headline__inner {
     padding: 0 15px 58px;
   }
 }
