--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -103,7 +103,10 @@
   }
 
   .headline__inner {
-    padding: 0 15px 58px; //!!!!!!!!!!!!!!!!!!!
+    padding: 32px 15px 58px; //!!!!!!!!!!!!!!!!!!!
+    @media screen and (max-width: $media-480) {
+      padding: 0 15px 58px; //!!!!!!!!!!!!!!!!!!!
+    }
   }
 }
 
