--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -104,9 +104,6 @@
 
   .headline__inner {
     padding: 32px 15px 58px; //!!!!!!!!!!!!!!!!!!!
-    // @media screen and (max-width: $media-480) {
-    //   padding: 0 15px 58px; //!!!!!!!!!!!!!!!!!!!
-    // }
   }
 }
 
@@ -119,5 +116,8 @@
   }
   .headline__buttons {
     gap: 15px;
+  }
+  .headline__inner {
+    padding: 0 15px 58px; //!!!!!!!!!!!!!!!!!!!
   }
 }
