--- a/styles.css
+++ b/styles.css
@@ -377,7 +377,7 @@
   }
   .headline__title {
     margin-bottom: 8px;
-    letter-spacing: -0.01em;
+    letter-spacing: -0.3125px;
   }
   .headline__buttons {
     gap: 15px;
