--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -113,7 +113,7 @@
   }
   .headline__title {
     margin-bottom: 8px;
-    letter-spacing: -0.01em;
+    letter-spacing: -0.3125px;
   }
   .headline__buttons {
     gap: 15px;
