--- a/styles.css
+++ b/styles.css
@@ -378,6 +378,7 @@
   .headline__title {
     margin-bottom: 8px;
     letter-spacing: -0.3125px;
+    margin: 0;
   }
   .headline__buttons {
     gap: 15px;
