--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -114,6 +114,7 @@
   .headline__title {
     margin-bottom: 8px;
     letter-spacing: -0.3125px;
+    margin: 0;
   }
   .headline__buttons {
     gap: 15px;
