--- a/styles.css
+++ b/styles.css
@@ -298,7 +298,7 @@
 .headline__description {
   max-width: 456px;
   font-size: 24px;
-  line-height: 1.4;
+  line-height: 142%;
   margin-bottom: 60px;
 }
 .headline__buttons {
