--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -28,7 +28,7 @@
   &__description {
     max-width: 456px;
     font-size: 24px;
-    line-height: 1.4;
+    line-height: 142%; ///!!!!!!!!!!!!!
     margin-bottom: 60px;
   }
 
