--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -120,6 +120,9 @@
     gap: 15px;
   }
   .headline__inner {
+    padding: 0 0px 58px; //!!!!!!!!!!!!!!!!!!!
+  }
+  .headline__content {
     padding: 0 15px 58px; //!!!!!!!!!!!!!!!!!!!
   }
 }
