--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -123,6 +123,6 @@
     padding: 0 0px 58px; //!!!!!!!!!!!!!!!!!!!
   }
   .headline__content {
-    padding: 0 15px 58px; //!!!!!!!!!!!!!!!!!!!
+    padding: 0 15px 0; //!!!!!!!!!!!!!!!!!!!
   }
 }
