--- a/styles.css
+++ b/styles.css
@@ -387,7 +387,7 @@
     padding: 0 0px 58px;
   }
   .headline__content {
-    padding: 0 15px 58px;
+    padding: 0 15px 0;
   }
 }
 .about__inner {
