--- a/styles.css
+++ b/styles.css
@@ -1436,11 +1436,16 @@
 @media screen and (max-width: 480px) {
   .order__title {
     font-size: 38px;
-    text-align: center;
     line-height: 1.1;
   }
   .order__description {
     margin-bottom: 68px;
+  }
+  .order {
+    padding: 54px 0 46px;
+  }
+  .order__content {
+    padding: 54px 15px 46px;
   }
 }
 .footer {
