--- a/styles.css
+++ b/styles.css
@@ -1435,12 +1435,15 @@
   }
 }
 @media screen and (max-width: 480px) {
+  .order__image {
+    margin-left: -14px;
+  }
   .order__title {
     font-size: 38px;
     line-height: 1.1;
   }
   .order__description {
-    margin-bottom: 68px;
+    margin-bottom: 40px;
   }
   .order {
     padding: 54px 0 46px;
