--- a/styles/order.scss
+++ b/styles/order.scss
@@ -94,6 +94,7 @@
   .order__image {
     // max-width: 200px;
     // height: 220px; //!!!!!!!!!!!!!!!!!!!
+    margin-left: -14px;
   }
   .order__title {
     font-size: 38px;
@@ -101,7 +102,7 @@
     line-height: 1.1;
   }
   .order__description {
-    margin-bottom: 68px;
+    margin-bottom: 40px;
   }
   .order {
     padding: 54px 0 46px; //!!!!!!!!!!!!
