--- a/styles/order.scss
+++ b/styles/order.scss
@@ -87,6 +87,7 @@
   }
   .order__form-input {
     max-width: 100%;
+    text-align: center;
   }
 }
 
@@ -94,7 +95,7 @@
   .order__image {
     // max-width: 200px;
     // height: 220px; //!!!!!!!!!!!!!!!!!!!
-    margin-left: -14px;
+    margin-left: -24px;
   }
   .order__title {
     font-size: 38px;
