--- a/styles.css
+++ b/styles.css
@@ -1439,11 +1439,11 @@
 }
 @media screen and (max-width: 480px) {
   .order__image {
-    margin-left: -24px;
+    margin-left: -16px;
   }
   .order__title {
     font-size: 38px;
-    line-height: 1.1;
+    line-height: 100%;
   }
   .order__description {
     margin-bottom: 40px;
