--- a/styles/order.scss
+++ b/styles/order.scss
@@ -97,12 +97,12 @@
   .order__image {
     // max-width: 200px;
     // height: 220px; //!!!!!!!!!!!!!!!!!!!
-    margin-left: -24px;
+    margin-left: -16px;
   }
   .order__title {
     font-size: 38px;
     // text-align: center; //!!!!!!!!!!!!!!
-    line-height: 1.1;
+    line-height: 100%;
   }
   .order__description {
     margin-bottom: 40px;
