--- a/styles.css
+++ b/styles.css
@@ -1442,11 +1442,14 @@
     margin-left: -16px;
   }
   .order__title {
-    font-size: 38px;
+    font-size: 40px;
     line-height: 100%;
+    line-height: 40px;
+    letter-spacing: -0.25px;
   }
   .order__description {
     margin-bottom: 40px;
+    font-size: 23px;
   }
   .order {
     padding: 50px 0 46px;
