--- a/styles/order.scss
+++ b/styles/order.scss
@@ -100,12 +100,15 @@
     margin-left: -16px;
   }
   .order__title {
-    font-size: 38px;
+    font-size: 40px;
     // text-align: center; //!!!!!!!!!!!!!!
     line-height: 100%;
+    line-height: 40px;
+    letter-spacing: -0.25px; //!!!!!!!!!!!!
   }
   .order__description {
     margin-bottom: 40px;
+    font-size: 23px; //!!!!!!!!!!!!!!!
   }
   .order {
     padding: 50px 0 46px; //!!!!!!!!!!!!
