--- a/styles/order.scss
+++ b/styles/order.scss
@@ -109,6 +109,7 @@
   .order__description {
     margin-bottom: 38px;
     font-size: 24px; //!!!!!!!!!!!!!!!
+    margin-top: 20px; //!!!!!!!!!!!
   }
   .order {
     padding: 50px 0 46px; //!!!!!!!!!!!!
