--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,6 @@
-.header .fa-chevron-down {
-  display: none;
+.header {
+  background-color: #f3c6bd;
+  padding: 40px 130px;
 }
 .header .nav__list {
   margin-top: 6px;
@@ -11,10 +12,6 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 1140px;
-  padding: 1px 0 1px 15px;
-  margin: 0 auto;
-  background-color: #f3c6bd;
   transition: padding 0.3s, background-color 0.3s;
   z-index: 1002;
 }
@@ -66,7 +63,7 @@
 .nav__list {
   display: flex;
   align-items: center;
-  gap: 55.5px;
+  gap: 50px;
 }
 .nav__list-item {
   cursor: pointer;
@@ -107,7 +104,6 @@
   border-radius: 6px;
   width: 612px;
   height: 292px;
-  z-index: 300;
   transition: box-shadow 0.2s ease-in-out;
 }
 .dropdown:hover {
@@ -130,6 +126,14 @@
   font-size: 18px;
 }
 
+@keyframes pulse-wave {
+  0% {
+    box-shadow: 0 0 0 0 rgba(252, 240, 227, 0.5), 0 0 0 10px rgba(243, 198, 189, 0.4), 0 0 0 20px rgba(252, 240, 227, 0.3), 0 0 0 30px rgba(243, 198, 189, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba(252, 240, 227, 0), 0 0 0 30px rgba(243, 198, 189, 0), 0 0 0 40px rgba(252, 240, 227, 0), 0 0 0 50px rgba(243, 198, 189, 0);
+  }
+}
 @keyframes header {
   0% {
     opacity: 0;
@@ -148,8 +152,8 @@
 
 .header__audio {
   position: absolute;
-  top: 52px;
-  right: 50px;
+  top: 12px;
+  right: -85px;
 }
 
 .mobile-menu-icon {
@@ -245,10 +249,14 @@
   }
 }
 @media screen and (max-width: 992px) {
+  .header {
+    padding: 0;
+  }
   .header__inner {
-    padding: 10px 15px;
-    background-color: #fff;
+    width: 100%;
     height: 64px;
+    background-color: #fff;
+    padding: 10px 15px;
   }
   .mobile-menu-icon {
     display: block;
@@ -387,7 +395,7 @@
     padding: 0 0px 58px;
   }
   .headline__content {
-    padding: 0 15px 0;
+    padding: 35px 15px 0;
   }
 }
 .about__inner {
@@ -1685,7 +1693,7 @@
   right: 0;
   bottom: 0;
   background: rgba(0, 0, 0, 0.7);
-  z-index: 260;
+  z-index: 1003;
   height: 6738px;
 }
 
