--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,8 +1,7 @@
 .header {
-  // background-color: #fff; //!!!!!!!!!!!!!!!!!
-  .fa-chevron-down {
-    display: none;
-  }
+  background-color: $color-beige;
+  padding: 40px 130px;
+
   .nav__list {
     margin-top: 6px;
     margin-right: 35.5px;
@@ -14,18 +13,8 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  // padding: 40px 130px 36px 130px; //!!!!!!
-  width: 1140px; // !!!!!!!!!!!!
-  padding: 1px 0 1px 15px; //!!!!!!!!!
-  margin: 0 auto;
-  background-color: $color-beige;
   transition: padding 0.3s, background-color 0.3s;
   z-index: 1002;
-
-  // @media screen and (max-width: $media-480) {
-  //   display: none;
-  // }
-
 
   &--sticky {
     position: fixed;
@@ -50,7 +39,7 @@
 .logo {
   display: flex;
   align-items: center;
-  gap: 15px; //!!!!!!!!!!!!!!!!!
+  gap: 15px;
   &__img {
     max-width: 60px;
     height: 60px;
@@ -60,7 +49,6 @@
 .logo__text {
   display: flex;
   flex-direction: column;
-  // gap: 6px;
 
   &-name {
     color: $color-black;
@@ -81,7 +69,7 @@
   &__list {
     display: flex;
     align-items: center;
-    gap: 55.5px; //!!!!!!!!!!!!!!!
+    gap: 50px;
 
     &-item {
       cursor: pointer;
@@ -92,7 +80,7 @@
     }
 
     .nav__list-link--test {
-      letter-spacing: -0.01px; //!!!!!!!!!!!!!!!
+      letter-spacing: -0.01px;
     }
 
     &-link {
@@ -126,7 +114,6 @@
   border-radius: 6px;
   width: 612px;
   height: 292px;
-  z-index: 300;
   transition: box-shadow 0.2s ease-in-out;
   &:hover {
     box-shadow: 0 0 10px 6px rgba($color-beige, 0.8);
@@ -154,16 +141,16 @@
 
 // Pulse Wave
 
-// @keyframes pulse-wave {
-//   0% {
-//     box-shadow: 0 0 0 0 rgba($color-yellow-light, 0.5), 0 0 0 10px rgba($color-beige, 0.4),
-//       0 0 0 20px rgba($color-yellow-light, 0.3), 0 0 0 30px rgba($color-beige, 0.2);
-//   }
-//   100% {
-//     box-shadow: 0 0 0 20px rgba($color-yellow-light, 0), 0 0 0 30px rgba($color-beige, 0),
-//       0 0 0 40px rgba($color-yellow-light, 0), 0 0 0 50px rgba($color-beige, 0);
-//   }
-// }
+@keyframes pulse-wave {
+  0% {
+    box-shadow: 0 0 0 0 rgba($color-yellow-light, 0.5), 0 0 0 10px rgba($color-beige, 0.4),
+      0 0 0 20px rgba($color-yellow-light, 0.3), 0 0 0 30px rgba($color-beige, 0.2);
+  }
+  100% {
+    box-shadow: 0 0 0 20px rgba($color-yellow-light, 0), 0 0 0 30px rgba($color-beige, 0),
+      0 0 0 40px rgba($color-yellow-light, 0), 0 0 0 50px rgba($color-beige, 0);
+  }
+}
 
 // smooth header
 
@@ -187,8 +174,8 @@
 
 .header__audio {
   position: absolute;
-  top: 52px;
-  right: 50px;
+  top: 12px;
+  right: -85px;
 }
 
 // Mobile Menu
@@ -201,7 +188,6 @@
 
   .fa-bars,
   .fa-times {
-    // font-size: clamp(22px, 1.2124rem + 0.813vw, 32px);
     font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
   }
 }
@@ -286,16 +272,20 @@
 }
 
 @media screen and (max-width: $media-992) {
+  .header {
+    padding: 0;
+  }
   .header__inner {
-    padding: 10px 15px;
-    background-color: $color-light;
+    width: 100%;
     height: 64px;
-    }
+    background-color: $color-light;
+    padding: 10px 15px;
+  }
 
-    .mobile-menu-icon {
-      display: block;
-      height: 64px;
-      border-left: 1px solid rgba($color-black, 0.6);
+  .mobile-menu-icon {
+    display: block;
+    height: 64px;
+    border-left: 1px solid rgba($color-black, 0.6);
   }
   .fa-bars,
   .fa-times {
