--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -15,11 +15,10 @@
   &__content {
     margin: 0 auto;
     text-align: center;
-    padding-right: 70px; //!!!!!!!!!!!!!!!
+    padding-right: 70px;
 
   @media screen and (max-width: $media-1200) {
-    padding-right: 0; //!!!!!!!!!!!!!!!
-    
+    padding-right: 0;
   }
 
 
@@ -36,10 +35,6 @@
       max-width: 555px;
       font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
       letter-spacing: -0.36px;
-
-      // @media screen and (max-width: $media-480) {
-      //   font-size: 39px;
-      // }
     }
 
     &-description {
@@ -47,7 +42,7 @@
       max-width: 555px;
       line-height: 34px;
       @media screen and (max-width: $media-480) {
-        line-height: 34px; //!!!!!!!!!!!!!!!
+        line-height: 34px;
       }
     }
   }
@@ -97,8 +92,6 @@
     &-img {
       width: 119px;
       height: 200px;
-      // width: 142px;
-      // height: 195px;
       margin-bottom: 22px;
     }
 
