--- a/styles/order.scss
+++ b/styles/order.scss
@@ -95,26 +95,23 @@
 
 @media screen and (max-width: $media-480) {
   .order__image {
-    // max-width: 200px;
-    // height: 220px; //!!!!!!!!!!!!!!!!!!!
     margin-left: -20px;
   }
   .order__title {
     font-size: 40px;
-    // text-align: center; //!!!!!!!!!!!!!!
     line-height: 100%;
     line-height: 40px;
-    letter-spacing: -0.25px; //!!!!!!!!!!!!
+    letter-spacing: -0.25px;
   }
   .order__description {
     margin-bottom: 38px;
-    font-size: 24px; //!!!!!!!!!!!!!!!
-    margin-top: 16px; //!!!!!!!!!!!
+    font-size: 24px;
+    margin-top: 16px;
   }
   .order {
-    padding: 50px 0 46px; //!!!!!!!!!!!!
+    padding: 50px 0 46px;
   }
   .order__content {
-    padding: 0 15px 46px; //!!!!!!!!!!!!!!!
+    padding: 0 15px 46px;
   }
 }
