fix scroll header

--- a/styles.css
+++ b/styles.css
@@ -20,7 +20,7 @@
   left: 0;
   right: 0;
   padding: 10px 130px;
-  background-color: rgba(243, 198, 189, 0.9);
+  background-color: #f3c6bd;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   z-index: 1000;
   animation-name: header;
