--- a/styles/header.scss
+++ b/styles/header.scss
@@ -21,7 +21,7 @@
     left: 0;
     right: 0;
     padding: 10px 130px;
-    background-color: rgba($color-beige, 0.9);
+    background-color: $color-beige;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     z-index: 1000;
     animation-name: header;
