--- a/styles/header.scss
+++ b/styles/header.scss
@@ -2,6 +2,10 @@
   background-color: $color-beige;
   padding: 40px 130px;
 
+  @media screen and (max-width: $media-992) {
+    padding: 0;
+  }
+
   .nav__list {
     margin-top: 6px;
     margin-right: 35.5px;
@@ -61,6 +65,10 @@
     opacity: 0.6;
     color: $color-black;
     line-height: 25px;
+
+    @media screen and (max-width: $media-1200) {
+      display: none;
+    }
   }
 }
 
@@ -69,6 +77,10 @@
     display: flex;
     align-items: center;
     gap: 50px;
+
+    @media screen and (max-width: $media-1200) {
+      display: none;
+    }
 
     &-item {
       cursor: pointer;
@@ -176,6 +188,10 @@
   position: absolute;
   top: 12px;
   right: -85px;
+
+  @media screen and (max-width: $media-1200) {
+    display: none;
+  }
 }
 
 // Mobile Menu
@@ -185,6 +201,17 @@
   font-size: 24px;
   cursor: pointer;
   color: rgba($color-black, 0.6);
+
+  @media screen and (max-width: $media-1200) {
+    position: relative;
+    display: block;
+    z-index: 1100;
+  }
+  @media screen and (max-width: $media-992) {
+    display: block;
+    height: 64px;
+    border-left: 1px solid rgba($color-black, 0.6);
+  }
 
   .fa-bars,
   .fa-times {
@@ -250,20 +277,9 @@
 }
 
 @media screen and (max-width: $media-1200) {
-  .mobile-menu-icon {
-    display: block;
-  }
-
-  .nav__list {
+  .button-blue--mobile {
     display: none;
   }
-
-  .button-blue--mobile,
-  .header__audio,
-  .logo__text-description {
-    display: none;
-  }
-
   .logo,
   .mobile-menu-icon {
     position: relative;
@@ -272,26 +288,16 @@
 }
 
 @media screen and (max-width: $media-992) {
-  .header {
-    padding: 0;
-  }
   .header__inner {
     width: 100%;
     height: 64px;
     background-color: $color-light;
     padding: 10px 15px;
   }
-
-  .mobile-menu-icon {
-    display: block;
-    height: 64px;
-    border-left: 1px solid rgba($color-black, 0.6);
-  }
   .fa-bars,
   .fa-times {
     padding: 20px 0 20px 20px;
   }
-
   .logo__img {
     width: 48px;
     height: 48px;
@@ -301,9 +307,5 @@
 @media screen and (max-width: $media-480) {
   .header__inner {
     padding: 10px 15px;
-  }
-  .logo__img {
-    width: 48px;
-    height: 48px;
   }
 }
