--- a/styles.css
+++ b/styles.css
@@ -455,11 +455,32 @@
   background-color: #fff;
   padding: 30px 130px 106px;
 }
+@media screen and (max-width: 1200px) {
+  .partners {
+    padding: 30px 130px 30px;
+  }
+}
+@media screen and (max-width: 885px) {
+  .partners {
+    padding: 20px 15px 46px 15px;
+  }
+}
+@media (max-width: 576px) {
+  .partners {
+    padding: 0 0 46px 0;
+  }
+}
 .partners__list {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(150px, 1fr));
   width: 100%;
   max-width: 1400px;
+}
+@media (max-width: 576px) {
+  .partners__list {
+    grid-template-columns: repeat(3, minmax(107px, 1fr));
+    gap: 0;
+  }
 }
 .partners__list-item {
   display: flex;
@@ -467,6 +488,12 @@
   align-items: center;
   padding: 20px;
   height: 94px;
+}
+@media (max-width: 576px) {
+  .partners__list-item {
+    border-bottom: 1px solid rgba(43, 41, 45, 0.1);
+    border-right: 1px solid rgba(43, 41, 45, 0.1);
+  }
 }
 .partners__list-item-link {
   display: flex;
@@ -482,29 +509,6 @@
   height: auto;
 }
 
-@media screen and (max-width: 1200px) {
-  .partners {
-    padding: 30px 130px 30px;
-  }
-}
-@media screen and (max-width: 885px) {
-  .partners {
-    padding: 20px 15px 46px 15px;
-  }
-}
-@media (max-width: 576px) {
-  .partners {
-    padding: 0 0 46px 0;
-  }
-  .partners__list-item {
-    border-bottom: 1px solid rgba(43, 41, 45, 0.1);
-    border-right: 1px solid rgba(43, 41, 45, 0.1);
-  }
-  .partners__list {
-    grid-template-columns: repeat(3, minmax(107px, 1fr));
-    gap: 0;
-  }
-}
 .features {
   display: flex;
   gap: 125px;
@@ -769,6 +773,26 @@
   background-color: #fcf0e3;
   padding: 142px 24px 102px 192px;
 }
+@media screen and (max-width: 1440px) {
+  .manage {
+    justify-content: center;
+    padding: 142px 24px 102px;
+  }
+}
+@media screen and (max-width: 1200px) {
+  .manage {
+    flex-direction: column;
+    text-align: center;
+    gap: 58px;
+    padding: 20px 24px 102px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .manage {
+    text-align: left;
+    padding: 50px 24px 34px;
+  }
+}
 .manage__wheel-image {
   width: 100%;
   max-width: 425px;
@@ -776,11 +800,22 @@
   max-height: auto;
   margin-bottom: 15px;
 }
+@media screen and (max-width: 480px) {
+  .manage__wheel-image {
+    width: 290px;
+    height: 344px;
+  }
+}
 .manage__wheel-text {
   font-size: 14px;
   opacity: 0.6;
   text-align: center;
   display: block;
+}
+@media screen and (max-width: 480px) {
+  .manage__wheel-text {
+    display: none;
+  }
 }
 .manage__content {
   margin-top: -38px;
@@ -788,12 +823,22 @@
 .manage__content-inner {
   padding-left: 30px;
 }
+@media screen and (max-width: 480px) {
+  .manage__content-inner {
+    padding-left: 0px;
+  }
+}
 .manage__content-inner-decor {
   display: block;
   font-size: 22px;
   font-weight: 700;
   color: #f1592b;
   margin-bottom: 24px;
+}
+@media screen and (max-width: 480px) {
+  .manage__content-inner-decor {
+    margin-bottom: 20px;
+  }
 }
 .manage__content-inner-title {
   font-size: 56px;
@@ -803,6 +848,11 @@
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
   max-width: 462px;
   margin-bottom: 30px;
+}
+@media screen and (max-width: 480px) {
+  .manage__content-inner-title {
+    margin-bottom: -8px;
+  }
 }
 .manage__content-inner-description {
   font-size: 24px;
@@ -843,42 +893,6 @@
   font-size: 16px;
 }
 
-@media screen and (max-width: 1440px) {
-  .manage {
-    justify-content: center;
-    padding: 142px 24px 102px;
-  }
-}
-@media screen and (max-width: 1200px) {
-  .manage {
-    flex-direction: column;
-    text-align: center;
-    gap: 58px;
-    padding: 20px 24px 102px;
-  }
-}
-@media screen and (max-width: 1200px) and (max-width: 480px) {
-  .manage {
-    text-align: left;
-    padding: 50px 24px 34px;
-  }
-  .manage__wheel-image {
-    width: 290px;
-    height: 344px;
-  }
-  .manage__wheel-text {
-    display: none;
-  }
-  .manage__content-inner {
-    padding-left: 0px;
-  }
-  .manage__content-inner-decor {
-    margin-bottom: 20px;
-  }
-  .manage__content-inner-title {
-    margin-bottom: -8px;
-  }
-}
 .communicate {
   background-color: #fff;
 }
@@ -1344,9 +1358,30 @@
   background-color: #fff;
   padding: 80px 0 110px;
 }
+@media screen and (max-width: 1200px) {
+  .hiring {
+    padding: 50px 15px 60px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .hiring {
+    padding: 50px 15px 30px;
+  }
+}
 .hiring__content {
   text-align: center;
   margin-bottom: 110px;
+}
+@media screen and (max-width: 1200px) {
+  .hiring__content {
+    margin-bottom: 40px;
+  }
+}
+@media screen and (max-width: 370px) {
+  .hiring .hiring__content-btn {
+    width: 100%;
+    max-width: 290px;
+  }
 }
 .hiring__content-title {
   font-size: 56px;
@@ -1355,11 +1390,22 @@
   margin-bottom: 30px;
   font-size: clamp(40px, 2.2037rem + 1.4815vw, 56px);
 }
+@media screen and (max-width: 768px) {
+  .hiring__content-title {
+    margin-bottom: 22px;
+  }
+}
 .hiring__content-description {
   font-size: 24px;
   max-width: 555px;
   margin: 0 auto;
   margin-bottom: 28px;
+}
+@media screen and (max-width: 768px) {
+  .hiring__content-description {
+    line-height: 1.4;
+    margin-bottom: 32px;
+  }
 }
 .hiring__list {
   margin: 0 auto;
@@ -1379,6 +1425,12 @@
   transition: background-color 0.2s ease-in-out;
   margin-bottom: 20px;
 }
+@media screen and (max-width: 480px) {
+  .hiring__item {
+    padding: 0 0 0 18px;
+    margin-bottom: 14px;
+  }
+}
 .hiring__item:hover {
   background-color: #3142c6;
   cursor: pointer;
@@ -1391,9 +1443,21 @@
   width: 100%;
   max-width: 620px;
 }
+@media screen and (max-width: 768px) {
+  .hiring__item-info {
+    flex-direction: column;
+    align-items: start;
+  }
+}
 .hiring__item-info-role {
   font-size: 22px;
   font-weight: 700;
+}
+@media screen and (max-width: 370px) {
+  .hiring__item-info-role {
+    max-width: 130px;
+    margin-bottom: 14px;
+  }
 }
 .hiring__item-info-location {
   font-size: clamp(1rem, 0.95rem + 0.2vw, 1.125rem);
@@ -1402,36 +1466,7 @@
 .hiring__item-arrow {
   font-size: 14px;
 }
-
-@media screen and (max-width: 1200px) {
-  .hiring {
-    padding: 50px 15px 60px;
-  }
-  .hiring__content {
-    margin-bottom: 40px;
-  }
-}
-@media screen and (max-width: 768px) {
-  .hiring__item-info {
-    flex-direction: column;
-    align-items: start;
-  }
-  .hiring__content-title {
-    margin-bottom: 22px;
-  }
-  .hiring__content-description {
-    line-height: 1.4;
-    margin-bottom: 32px;
-  }
-}
 @media screen and (max-width: 480px) {
-  .hiring {
-    padding: 50px 15px 30px;
-  }
-  .hiring__item {
-    padding: 0 0 0 18px;
-    margin-bottom: 14px;
-  }
   .hiring__item-arrow {
     background-color: #d5d4d5;
     padding: 60px 20px;
@@ -1439,16 +1474,7 @@
     border-bottom-right-radius: 6px;
   }
 }
-@media screen and (max-width: 370px) {
-  .hiring__item-info-role {
-    max-width: 130px;
-    margin-bottom: 14px;
-  }
-  .hiring__content-btn {
-    width: 100%;
-    max-width: 290px;
-  }
-}
+
 .order {
   display: flex;
   align-items: center;
@@ -1458,52 +1484,6 @@
   background-color: #f4f5f7;
   padding: 72px 0;
 }
-.order__image {
-  max-width: 270px;
-  height: 296px;
-}
-.order__title {
-  font-size: 40px;
-  font-weight: 700;
-}
-.order__description {
-  font-size: 22px;
-  margin-bottom: 26px;
-  max-width: 555px;
-  margin-bottom: 30px;
-}
-.order__form {
-  display: flex;
-  gap: 10px;
-  margin-bottom: 10px;
-}
-.order__form-input {
-  display: block;
-  width: 100%;
-  max-width: 385px;
-  border-radius: 2px;
-  line-height: 1;
-  border: 1px solid rgba(43, 41, 45, 0.2);
-  padding: 13px 0 13px 15px;
-}
-.order__form-input:focus {
-  outline: 1px solid #3142c6;
-}
-.order__text {
-  font-size: 14px;
-  color: rgba(43, 41, 45, 0.6);
-  line-height: 157%;
-  display: block;
-}
-.order__link {
-  color: #3142c6;
-  text-decoration: underline;
-  transition: color 0.2s ease-in-out;
-}
-.order__link:hover {
-  color: #0189d1;
-}
-
 @media screen and (max-width: 1440px) {
   .order {
     justify-content: center;
@@ -1524,36 +1504,94 @@
     gap: 46px;
     padding: 54px 15px 46px;
   }
-  .order__form {
-    flex-direction: column;
+}
+@media screen and (max-width: 480px) {
+  .order {
+    padding: 50px 0 46px;
   }
-  .order__form-input {
-    max-width: 100%;
-    text-align: center;
-  }
+}
+.order__image {
+  max-width: 270px;
+  height: 296px;
 }
 @media screen and (max-width: 480px) {
   .order__image {
     margin-left: -20px;
   }
+}
+@media screen and (max-width: 480px) {
+  .order__content {
+    padding: 0 15px 46px;
+  }
+}
+.order__title {
+  font-size: 40px;
+  font-weight: 700;
+}
+@media screen and (max-width: 480px) {
   .order__title {
     font-size: 40px;
     line-height: 100%;
     line-height: 40px;
     letter-spacing: -0.25px;
   }
+}
+.order__description {
+  font-size: 22px;
+  margin-bottom: 26px;
+  max-width: 555px;
+  margin-bottom: 30px;
+}
+@media screen and (max-width: 480px) {
   .order__description {
     margin-bottom: 38px;
     font-size: 24px;
     margin-top: 16px;
   }
-  .order {
-    padding: 50px 0 46px;
-  }
-  .order__content {
-    padding: 0 15px 46px;
+}
+.order__form {
+  display: flex;
+  gap: 10px;
+  margin-bottom: 10px;
+}
+@media screen and (max-width: 586px) {
+  .order__form {
+    flex-direction: column;
   }
 }
+.order__form-input {
+  display: block;
+  width: 100%;
+  max-width: 385px;
+  border-radius: 2px;
+  line-height: 1;
+  border: 1px solid rgba(43, 41, 45, 0.2);
+  padding: 13px 0 13px 15px;
+}
+@media screen and (max-width: 586px) {
+  .order__form-input {
+    max-width: 100%;
+    text-align: center;
+  }
+}
+.order__form-input:focus {
+  outline: 1px solid #3142c6;
+}
+.order__text {
+  font-size: 14px;
+  color: rgba(43, 41, 45, 0.6);
+  line-height: 157%;
+  display: block;
+}
+.order__link {
+  color: #3142c6;
+  text-decoration: underline;
+  transition: color 0.2s ease-in-out;
+}
+.order__link:hover {
+  color: #0189d1;
+}
+
 .footer {
   position: relative;
   display: flex;
