--- a/styles/audience.scss
+++ b/styles/audience.scss
@@ -52,6 +52,7 @@
       font-size: 24px;
       max-width: 555px;
       line-height: 34px;
+      margin-bottom: 34px;
 
       @media screen and (max-width: $media-576) {
         margin-bottom: 30px;
