--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -4,6 +4,11 @@
     justify-content: space-between;
     background-color: $color-beige;
     padding: 40px 25px 126px 130px;
+
+    @media screen and (max-width: $media-1440) {
+      padding: 0px 0px 66px 0px;
+    }
+
     position: relative;
 
     @media screen and (max-width: $media-992) {
@@ -93,6 +98,10 @@
     width: 796px;
     height: 448px;
 
+    @media screen and (max-width: $media-1440) {
+      top: 14px;
+      right: 0;
+    }
     @media screen and (max-width: $media-855) {
       position: static;
     }
