--- a/styles.css
+++ b/styles.css
@@ -300,8 +300,12 @@
   justify-content: space-between;
   background-color: #f3c6bd;
   padding: 40px 25px 126px 130px;
-  padding: 0px 0px 66px 0px;
   position: relative;
+}
+@media screen and (max-width: 1440px) {
+  .headline__inner {
+    padding: 0px 0px 66px 0px;
+  }
 }
 @media screen and (max-width: 992px) {
   .headline__inner {
@@ -396,8 +400,12 @@
   right: 22px;
   width: 796px;
   height: 448px;
-  top: 14px;
-  right: 0;
+}
+@media screen and (max-width: 1440px) {
+  .headline__img {
+    top: 24px;
+    right: 0;
+  }
 }
 @media screen and (max-width: 885px) {
   .headline__img {
