--- a/styles.css
+++ b/styles.css
@@ -302,11 +302,6 @@
   padding: 40px 25px 126px 130px;
   position: relative;
 }
-@media screen and (max-width: 1440px) {
-  .headline__inner {
-    padding: 0px 0px 66px 0px;
-  }
-}
 @media screen and (max-width: 992px) {
   .headline__inner {
     padding-left: 15px;
@@ -400,12 +395,6 @@
   right: 22px;
   width: 796px;
   height: 448px;
-}
-@media screen and (max-width: 1440px) {
-  .headline__img {
-    top: 24px;
-    right: 0;
-  }
 }
 @media screen and (max-width: 885px) {
   .headline__img {
@@ -1528,6 +1517,8 @@
 }
 @media screen and (max-width: 480px) {
   .order__image {
+    max-width: 200px;
+    height: 220px;
     margin-left: -20px;
   }
 }
