--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -5,9 +5,9 @@
     background-color: $color-beige;
     padding: 40px 25px 126px 130px;
 
-    @media screen and (max-width: $media-1440) {
-      padding: 0px 0px 66px 0px;
-    }
+    // @media screen and (max-width: $media-1440) {
+    //   padding: 0px 0px 66px 0px;
+    // }
 
     position: relative;
 
@@ -98,10 +98,10 @@
     width: 796px;
     height: 448px;
 
-    @media screen and (max-width: $media-1440) {
-      top: 24px;
-      right: 0;
-    }
+    // @media screen and (max-width: $media-1440) {
+    //   top: 24px;
+    //   right: 0;
+    // }
     @media screen and (max-width: $media-855) {
       position: static;
     }
