--- a/styles/order.scss
+++ b/styles/order.scss
@@ -28,6 +28,8 @@
     height: 296px;
 
     @media screen and (max-width: $media-480) {
+      max-width: 200px;
+      height: 220px;
       margin-left: -20px;
     }
   }
