--- a/styles/order.scss
+++ b/styles/order.scss
@@ -48,6 +48,7 @@
       font-size: 40px;
       line-height: 100%;
       line-height: 40px;
+      text-align: center;
       letter-spacing: -0.25px;
     }
   }
