--- a/styles.css
+++ b/styles.css
@@ -364,7 +364,7 @@
 }
 @media screen and (max-width: 885px) {
   .headline__description {
-    margin-bottom: 30px;
+    margin: 30px 0;
   }
 }
 .headline__buttons {
