--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -64,7 +64,7 @@
     margin-bottom: 60px;
 
     @media screen and (max-width: $media-855) {
-      margin-bottom: 30px;
+      margin: 30px 0;
     }
   }
 
