--- a/styles/order.scss
+++ b/styles/order.scss
@@ -30,7 +30,7 @@
     @media screen and (max-width: $media-480) {
       max-width: 200px;
       height: 220px;
-      margin-left: -20px;
+      // margin-left: -20px;
     }
   }
 
