--- a/styles.css
+++ b/styles.css
@@ -364,7 +364,7 @@
 }
 @media screen and (max-width: 885px) {
   .headline__description {
-    margin: 28px 0 32px;
+    margin: 27.5px 0 32px;
   }
 }
 .headline__buttons {
@@ -1519,7 +1519,6 @@
   .order__image {
     max-width: 200px;
     height: 220px;
-    margin-left: -20px;
   }
 }
 @media screen and (max-width: 480px) {
@@ -1638,6 +1637,11 @@
 @media screen and (max-width: 480px) {
   .footer__top {
     border: none;
+  }
+}
+@media screen and (max-width: 480px) {
+  .footer__info {
+    margin: 0 auto;
   }
 }
 .footer__info-desc {
