--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -27,7 +27,7 @@
       padding: 42px 0 12px 15px;
       grid-template-columns: repeat(1, 300px);
       justify-items: left;
-      gap: 64px;
+      gap: 68px;
     }
     @media screen and (max-width: $media-480) {
       border: none;
@@ -84,7 +84,7 @@
       @include flex-column(12px);
 
       @media screen and (max-width: $media-480) {
-        gap: 8px;
+        gap: 8px; //!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!
       }
 
       &-item {
@@ -144,7 +144,7 @@
   }
   .logo__img--footer {
     width: 60px;
-    height: 60px;
+    height: 58px; //!!!!!!!!!!!!!!!!!!!!!!!!!
   }
   .logo__text--footer {
     margin-bottom: 30px;
