--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -31,7 +31,7 @@
     }
     @media screen and (max-width: $media-480) {
       border: none;
-      padding: 42px 0 12px;
+      padding: 42px 10px 12px;
     }
   }
 
