--- a/styles/header.scss
+++ b/styles/header.scss
@@ -306,6 +306,6 @@
 
 @media screen and (max-width: $media-480) {
   .header__inner {
-    padding: 10px 15px;
+    padding: 10px 21px 10px 15px;
   }
 }
