--- a/styles.css
+++ b/styles.css
@@ -292,7 +292,7 @@
 }
 @media screen and (max-width: 480px) {
   .header__inner {
-    padding: 10px 15px;
+    padding: 10px 21px 10px 15px;
   }
 }
 .headline__inner {
