--- a/styles.css
+++ b/styles.css
@@ -40,7 +40,7 @@
 .logo {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 14px;
 }
 .logo__img {
   max-width: 60px;
@@ -193,12 +193,14 @@
   .mobile-menu-icon {
     display: block;
     height: 64px;
-    border-left: 1px solid rgba(43, 41, 45, 0.6);
+    border-left: 1px solid rgba(0, 0, 0, 0.15);
+    opacity: 0.15px;
   }
 }
 .mobile-menu-icon .fa-bars,
 .mobile-menu-icon .fa-times {
   font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
+  color: rgba(44, 50, 65, 0.6);
 }
 
 .mobile-menu {
@@ -292,7 +294,7 @@
 }
 @media screen and (max-width: 480px) {
   .header__inner {
-    padding: 10px 21px 10px 15px;
+    padding: 10px 20px 10px 15px;
   }
 }
 .headline__inner {
