--- a/styles/header.scss
+++ b/styles/header.scss
@@ -42,7 +42,7 @@
 .logo {
   display: flex;
   align-items: center;
-  gap: 15px;
+  gap: 14px;
   &__img {
     max-width: 60px;
     height: 60px;
@@ -210,12 +210,14 @@
   @media screen and (max-width: $media-992) {
     display: block;
     height: 64px;
-    border-left: 1px solid rgba($color-black, 0.6);
+    border-left: 1px solid rgba($color-dark, 0.15);
+    opacity: 0.15px;
   }
 
   .fa-bars,
   .fa-times {
     font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
+    color: rgba($color-grey, 0.6);
   }
 }
 
@@ -306,6 +308,6 @@
 
 @media screen and (max-width: $media-480) {
   .header__inner {
-    padding: 10px 21px 10px 15px;
+    padding: 10px 20px 10px 15px; //!!!!!!!!!!!!!!!!
   }
 }
