--- a/styles/header.scss
+++ b/styles/header.scss
@@ -308,6 +308,6 @@
 
 @media screen and (max-width: $media-480) {
   .header__inner {
-    padding: 10px 20px 10px 15px; //!!!!!!!!!!!!!!!!
+    padding: 10px 20px 10px 15px;
   }
 }
