--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -64,7 +64,7 @@
     margin-bottom: 60px;
 
     @media screen and (max-width: $media-855) {
-      margin: 29px 0 32px; //!!!!!!!!!!!!!!!!!!!!!!!!!!
+      margin: 29px 0 32px;
     }
   }
 
