--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,6 +1,6 @@
 .header {
   background-color: $color-beige;
-  padding: 40px 130px;
+  // padding: 40px 130px;
 
   @media screen and (max-width: $media-992) {
     padding: 0;
