--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,5 +1,5 @@
 .header {
-  // background-color: $color-beige;
+  background-color: $color-beige;
   // padding: 40px 130px;
   padding: 0px 130px;
 
