--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 .header {
   background-color: #f3c6bd;
-  padding: 0px 130px;
+  margin: 40px 130px;
 }
 @media screen and (max-width: 992px) {
   .header {
@@ -301,7 +301,7 @@
   display: flex;
   justify-content: space-between;
   background-color: #f3c6bd;
-  padding: 40px 25px 126px 130px;
+  margin: 40px 25px 126px 130px;
   position: relative;
 }
 @media screen and (max-width: 992px) {
