--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -3,7 +3,7 @@
     display: flex;
     justify-content: space-between;
     background-color: $color-beige;
-    padding: 40px 25px 126px 130px;
+    margin: 40px 25px 126px 130px;
 
     // @media screen and (max-width: $media-1440) {
     //   padding: 0px 0px 66px 0px;
