--- a/styles/headline.scss
+++ b/styles/headline.scss
@@ -1,5 +1,7 @@
 .headline {
   &__inner {
+    max-width: 1249px;
+    height: 456px;
     display: flex;
     justify-content: space-between;
     background-color: $color-beige;
@@ -93,8 +95,8 @@
 
   &__img {
     position: absolute;
-    top: 48px;
-    right: 22px;
+    top: 8px;
+    right: 0;
     width: 796px;
     height: 448px;
 
