--- a/styles/header.scss
+++ b/styles/header.scss
@@ -1,13 +1,9 @@
 .header {
-  width: 1140px;
-  height: 62px;
   background-color: $color-beige;
-  // padding: 40px 130px;
   margin: 40px 130px;
-  // padding: 0px 130px;
 
   @media screen and (max-width: $media-992) {
-    padding: 0;
+    margin: 0;
   }
 
   .nav__list {
@@ -17,6 +13,9 @@
 }
 
 .header__inner {
+  width: 100%;
+  max-width: 1140px;
+  height: 62px;
   position: relative;
   display: flex;
   justify-content: space-between;
@@ -312,6 +311,6 @@
 
 @media screen and (max-width: $media-480) {
   .header__inner {
-    padding: 10px 20px 10px 15px;
+    // margin: 10px 20px 10px 15px;
   }
 }
