--- a/styles.css
+++ b/styles.css
@@ -306,7 +306,6 @@
 }
 @media screen and (max-width: 992px) {
   .headline {
-    padding-left: 15px;
     margin: 40px 15px 126px;
   }
 }
@@ -331,6 +330,11 @@
   display: flex;
   flex-direction: column;
   z-index: 100;
+}
+@media screen and (max-width: 992px) {
+  .headline__content {
+    margin-left: 15px;
+  }
 }
 @media screen and (max-width: 885px) {
   .headline__content {
