--- a/styles/header.scss
+++ b/styles/header.scss
@@ -44,7 +44,7 @@
 .logo {
   display: flex;
   align-items: center;
-  gap: 14px;
+  gap: 11px; //!!!!!!!!!!!!!!!!!!!!!!!
   &__img {
     max-width: 60px;
     height: 58px;
@@ -221,7 +221,7 @@
   .fa-times {
     font-size: clamp(22px, 1.1898rem + 0.9259vw, 32px);
     color: rgba($color-grey, 0.6);
-    margin-left: 2px; //!!!!!!!!!!!
+    margin-left: -2px; //!!!!!!!!!!!
   }
 }
 
@@ -298,11 +298,11 @@
     width: 100%;
     height: 64px;
     background-color: $color-light;
-    padding: 8px 15px;
+    padding: 8px 20px 8px 15px; //!!!!!!!!!!!!!!!!
   }
   .fa-bars,
   .fa-times {
-    padding: 20px 0 20px 20px;
+    padding: 20px 0 20px 24px;
   }
   .logo__img {
     width: 48px;
