--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -45,7 +45,7 @@
     font-size: 18px;
     color: rgba($color-black, 0.6);
     margin-bottom: 28px;
-    margin-top: 26px; //!!!!!!!!!!!!!!!
+    margin-top: 26px;
 
     @media screen and (max-width: $media-480) {
       display: none;
