--- a/styles/header.scss
+++ b/styles/header.scss
@@ -51,6 +51,12 @@
   }
 }
 
+@media screen and (max-width: $media-480) {
+  .logo__header {
+    gap: 11px; //!!!!!!!!!!!
+  }
+}
+
 .logo__text {
   display: flex;
   flex-direction: column;
