--- a/styles/header.scss
+++ b/styles/header.scss
@@ -46,8 +46,8 @@
   align-items: center;
   gap: 14px;
   &__img {
-    max-width: 60px;
-    height: 58px;
+    width: 60px; //!!!!!!!!!!!
+    height: 60px;
   }
 }
 
